# Snake

./: .gitignore  ARCHITECTURE.txt  CMakeLists.txt  FILES_OVERVIEW.md  SnakeOpenGL.vcxproj  SnakeOpenGL.vcxproj.filters  Source.c  build.ps1
libs/x64/Debug/: SnakeOpenGL.exe.recipe  source.new.obj.enc
libs/x64/Debug/SnakeOpenGL.tlog/: CL.read.1.tlog  SnakeOpenGL.lastbuildstate  link.secondary.1.tlog  link.write.1.tlog
libs/x64/Release/: SnakeOpenGL.iobj  SnakeOpenGL.ipdb
libs/x64/Release/SnakeOpenGL.tlog/: link.secondary.1.tlog
src/: Source.c  Source.h  snake.c
src/bench/: bench.c  bench.h
src/errors/: err.c  err.h
src/gpu/: hip_bot.cpp  hip_bot.h  hip_kernels.hip  hip_mcts.hip  hip_test.cpp  hip_types.h
src/snake/: Source.c  Source.h
tests/hip_minimal/: hip_minimal.hip
x64/Debug/: SnakeOpenGL.ilk  vc143.idb
x64/Debug/SnakeOpenGL.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog
x64/Release/: SnakeOpenGL.exe.recipe  SnakeOpenGL.iobj  SnakeOpenGL.ipdb
x64/Release/SnakeOpenGL.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  SnakeOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
